openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-bot
  labels:
    app: github-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-bot
  template:
    metadata:
      labels:
        app: github-bot
    spec:
      containers:
      - name: github-bot
        image: quay.io/shanand/github-bot:latest
        ports:
        - containerPort: 8080
