openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-bot-service
spec:
  selector:
    app: github-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
