openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-bot-route
spec:
  to:
    kind: Service
    name: github-bot-service
  port:
    targetPort: 80
  tls:
    termination: edge
